--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -31,6 +31,14 @@
 :root {
 	--font-family-main: 'Gabarito', cursive;
 	--font-family-sub: 'Roboto', sans-serif;
+
+	@media (prefers-color-scheme: dark) {
+		--font-color-main: oklch(0.95 0 0);
+		--font-color-accent: oklch(0.62 0.32 276.05);
+		--font-color-accent-sub: oklch(0.68 0.31 24.34);
+		--font-color-subtle: oklch(0.73 0 0);
+		--bg-color-main: oklch(0.25 0 0);
+	}
 }
 
 body {
