--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1,4 +1,4 @@
-@property --font-color-main {
+/* @property --font-color-main {
 	syntax: '<color>';
 	inherits: true;
 	initial-value: oklch(0.32 0 0);
@@ -39,21 +39,7 @@
 	inherits: true;
 	initial-value: oklch(0.94 0.02 107.92);
 }
-
-:root {
-	--font-family-main: 'Gabarito', cursive;
-	--font-family-sub: 'Roboto', sans-serif;
-
-	@media (prefers-color-scheme: dark) {
-		--font-color-main: oklch(0.95 0 0);
-		--font-color-accent: oklch(0.62 0.32 276.05);
-		--font-color-accent-sub: oklch(0.68 0.31 24.34);
-		--font-color-subtle: oklch(0.73 0 0);
-		--bg-color-main: oklch(0.25 0 0);
-		--bg-color-accent: oklch(0.53 0.23 275.35);
-		--bg-color-accent-sub: oklch(0.54 0 0);
-	}
-}
+*/
 
 body {
 	font-family: var(--font-family-main);
