--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -1,3 +1,22 @@
 @tailwind base;
+
+@layer base {
+	body {
+		@apply font-main;
+	}
+
+	input[type='text'],
+	input[type='email'],
+	input[type='password'],
+	input[type='number'],
+	input[type='tel'] {
+		@apply px-4 py-2;
+	}
+
+	input[type='number'] {
+		@apply text-right;
+	}
+}
+
 @tailwind components;
 @tailwind utilities;
