--- a/app/assets/css/tailwind.css
+++ b/app/assets/css/tailwind.css
@@ -1,8 +1,15 @@
 @tailwind base;
 
 @layer base {
+	html {
+		@apply h-full;
+	}
 	body {
-		@apply font-main;
+		@apply font-main h-full;
+	}
+
+	#__nuxt {
+		@apply h-full;
 	}
 }
 
