--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,3 +1,55 @@
-button:hover {
+button {
 	cursor: pointer;
+}
+
+html {
+	block-size: 100%;
+	font-family: "Comfortaa", sans-serif;
+}
+
+body {
+	block-size: 100%;
+}
+
+#__nuxt {
+	block-size: 100%;
+}
+
+/* enable transitions */
+[popover],
+dialog,
+::backdrop {
+	transition:
+		display 0.2s allow-discrete,
+		overlay 0.2s allow-discrete,
+		opacity 0.2s,
+		translate 0.2s;
+	opacity: 0;
+}
+
+/* Disable transitions for reduced motion */
+@media (prefers-reduced-motion: reduce) {
+	[popover],
+	dialog,
+	::backdrop {
+		transition: none;
+	}
+}
+
+/* On Stage */
+:popover-open,
+:popover-open::backdrop,
+[open],
+[open]::backdrop {
+	opacity: 1;
+}
+
+/* Off Stage */
+@starting-style {
+	:popover-open,
+	:popover-open::backdrop,
+	[open],
+	[open]::backdrop {
+		opacity: 0;
+	}
 }
